Add styling for weather app container and elements
Enhanced the UI by adding CSS styles for the container, header, input, search button, and weather display in style.css. Minor formatting adjustment in index.html to improve structure.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <h1>Weather App</h1>
         <input type="text" class="city" placeholder="Enter city name">
         <button class="search">Search</button>
-        <div class="weather"></div>
+        <div class="weather">
+            
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
