--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
         <input type="text" class="city" placeholder="Enter city name">
         <button class="search">Search</button>
         <div class="weather">
-            
+            <p>City: <span id="city"></span></p>
+            <p>Country: <span id="country"></span></p>
+            <p>Region: <span id="region"></span></p>
+            <p>Temperature: <span id="temp"></span></p>
+            <p>Condition: <span id="condition"></span></p>
+            <p>Humidity: <span id="humidity"></span></p>
+            <p>Wind: <span id="wind"></span></p>
+            <p>Pressure: <span id="pressure"></span></p>
+            <p>Visibility: <span id="visibility"></span></p>
         </div>
     </div>
     <script src="script.js"></script>
