Improve weather app input and layout styling
Added an id to the city input field in index.html for easier DOM access. Enhanced the weather section layout in style.css using CSS grid for better responsiveness and appearance, and adjusted padding for input and button elements. Also added minor markup tweaks for consistency.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Weather App</h1>
-        <input type="text" class="city" placeholder="Enter city name">
+        <input type="text" class="city" id="inp" placeholder="Enter city name">
         <button class="search">Search</button>
         <div class="weather">
             <p>City: <span id="city"></span></p>
@@ -19,7 +19,7 @@
             <p>Condition: <span id="condition"></span></p>
             <p>Humidity: <span id="humidity"></span></p>
             <p>Wind: <span id="wind"></span></p>
-            <p>Pressure: <span id="pressure"></span></p>
+            <p>Pressure: <span id="pressure"> </span></p>
             <p>Visibility: <span id="visibility"></span></p>
         </div>
     </div>
